--- a/demos/superjumper/proj/superjumper.vcxproj.filters
+++ b/demos/superjumper/proj/superjumper.vcxproj.filters
@@ -171,5 +171,8 @@
     <ClCompile Include="..\src\SoundController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\winmain.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
